--- a/setup.Rmd
+++ b/setup.Rmd
@@ -2,7 +2,7 @@
 
 ## Overview
 
-In this chapter, you'll learn how to install all of that software 
+In this chapter, you'll learn how to install all of the software 
 needed to do the data science covered in this book on your own computer.
 
 ## Chapter learning objectives
@@ -16,14 +16,14 @@ By the end of the chapter, readers will be able to do the following:
 ## Installing software on your own computer
 
 This section will provide instructions for installing the software required by 
-this book on our own computers. 
+this book on your own computer. 
 Given that installation instructions can vary widely based on the computer setup,
 we have created instructions for multiple operating systems.
 In particular, the installation instructions below have been verified to work
 on a computer that:
 
 - runs one of the following operating systems: Ubuntu 20.04, macOS Big Sur (version 11.4.x or 11.5.x), Windows 10 Professional, Enterprise or Education (version 2004, 20H2, or 21H1),
-- can connect to networks via a wireless connection,
+- has a connection to the internet,
 - uses a 64-bit CPU,
 - uses English as the default language.
 
@@ -58,9 +58,10 @@ sudo apt install git
 
 ### Miniconda
 
-To run Jupyter notebooks on our computers, 
-we will need to install the web-based platform JupyterLab. 
-But JupyterLab relies on Python; we can install this via
+To run Jupyter notebooks on your computer, 
+you will need to install the web-based platform JupyterLab. 
+But JupyterLab relies on Python, so we need to install Python first.
+We can install Python via
 the \index{miniconda} [miniconda Python package distribution](https://docs.conda.io/en/latest/miniconda.html).
 
 **Windows:** To install miniconda on Windows, download 
@@ -74,28 +75,29 @@ When this opens, you will see a prompt similar to
 `(base) C:\Users\your_name`. 
 
 **MacOS:** To install miniconda on MacOS, you will need to use a different 
-installation method depending on the type of processor chip your laptop has.
+installation method depending on the type of processor chip your computer has.
 
-If your Mac laptop has an Intel x86 processor chip you can download 
+If your Mac computer has an Intel x86 processor chip you can download 
 the [latest Python 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.pkg). 
 After the download has finished, run the installer and accept the default 
 configuration for all pages.
 
-If your Mac laptop has an Apple M1 processor chip you can download 
+If your Mac computer has an Apple M1 processor chip you can download 
 the [latest Python 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-arm64.sh).
-After the download has finished, you need to run the downloaded script in the terminal. 
-Most laptops will save this to the `Downloads` folder. If this is the case for yours you can run the script in the terminal by typing:
+After the download has finished, you need to run the downloaded script in the terminal using a command
+like:
 
 ```
 bash path/to/Miniconda3-latest-MacOSX-arm64.sh
 ```
 
-> **Note:** Most often, this file is downloaded to the Downloads directory, 
-and thus the command will look like this:
->
-> ```
-> bash Downloads/Miniconda3-latest-MacOSX-arm64.sh
-> ```
+Make sure to replace `path/to/` with the path of the folder
+containing the downloaded script. Most computers will save downloaded files to the `Downloads` folder. 
+If this is the case for your computer, you can run the script in the terminal by typing:
+
+```
+bash Downloads/Miniconda3-latest-MacOSX-arm64.sh
+```
 
 The instructions for the installation will then appear:
 
@@ -105,21 +107,22 @@ The instructions for the installation will then appear:
 (4) Press Enter to accept the default installation location.
 (5) Type `yes` and press enter to instruct the installer to run `conda init`, which makes `conda` available from the terminal.
 
-**Ubuntu:** To install miniconda on Ubuntu, we first download
+**Ubuntu:** To install miniconda on Ubuntu, first download
 the [latest Python 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh). 
 After the download has finished, open the terminal and execute the following 
-commands:
+command:
 
 ```
 bash path/to/Miniconda3-latest-Linux-x86_64.sh
 ```
 
-> **Note:** Most often, this file is downloaded to the Downloads directory, 
-and thus the command will look like this:
->
-> ```
-> bash Downloads/Miniconda3-latest-Linux-x86_64.sh
-> ```
+Make sure to replace `path/to/` with the path of the folder containing the downloaded
+script. Most often this file will be downloaded to the `Downloads` folder.
+If this is the case for your computer, you can run the script in the terminal by typing:
+
+```
+bash Downloads/Miniconda3-latest-Linux-x86_64.sh
+```
 
 The instructions for the installation will then appear:
 
@@ -147,12 +150,12 @@ tab in your default browser with the JupyterLab interface. To exit out of
 JupyterLab you can click `File -> Shutdown`, or go to the terminal from which 
 you launched JupyterLab, hold `Ctrl`, and press `C` twice.
 
-To improve the experience of using R in JupyterLab, we will add an extension 
-that allows us to set up keyboard shortcuts for inserting text.
+To improve the experience of using R in JupyterLab, you should also add an extension 
+that allows you to set up keyboard shortcuts for inserting text.
 By default, 
 this extension creates shortcuts for inserting two of the most common R 
 operators: `<-` and `|>`. Type the following in the Anaconda Prompt (Windows)
-or terminal (MacOS and Ubuntu) and press  enter:
+or terminal (MacOS and Ubuntu) and press enter:
 
 ```
 jupyter labextension install @techrah/text-shortcuts
