--- a/setup.Rmd
+++ b/setup.Rmd
@@ -99,13 +99,10 @@ If this is the case for your computer, you can run the script in the terminal by
 bash Downloads/Miniconda3-latest-MacOSX-arm64.sh
 ```
 
-The instructions for the installation will then appear:
-
-(1) Press Enter.
-(2) Once the license agreement shows, you can press space scroll down or press `q` to skip reading it.
-(3) Type `yes` and press enter to accept the license agreement.
-(4) Press Enter to accept the default installation location.
-(5) Type `yes` and press enter to instruct the installer to run `conda init`, which makes `conda` available from the terminal.
+The instructions for the installation will then appear. 
+Follow the prompts and agree to accepting the license,
+the default installation location,
+and to running `conda init`, which makes `conda` available from the terminal.
 
 **Ubuntu:** To install miniconda on Ubuntu, first download
 the [latest Python 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh). 
@@ -124,13 +121,10 @@ If this is the case for your computer, you can run the script in the terminal by
 bash Downloads/Miniconda3-latest-Linux-x86_64.sh
 ```
 
-The instructions for the installation will then appear:
-
-(1) Press Enter.
-(2) Once the license agreement shows, you can press space scroll down or press `q` to skip reading it.
-(3) Type `yes` and press enter to accept the license agreement.
-(4) Press Enter to accept the default installation location.
-(5) Type `yes` and press enter to instruct the installer to run `conda init`, which makes `conda` available from the terminal.
+The instructions for the installation will then appear. 
+Follow the prompts and agree to accepting the license,
+the default installation location,
+and to running `conda init`, which makes `conda` available from the terminal.
 
 ### JupyterLab
 
