fixed issue with html rendering

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(message = FALSE,
 
 print_html_nodes <- function(html_nodes_object) {
   if(!is_latex_output()) {
-    html_nodes
+    html_nodes_object
   } else {
     output <- capture.output(html_nodes_object)
     
