chapter 1 - added fixed figures where needed without creating awkward large whitespaces

--- a/pdf/index.Rmd
+++ b/pdf/index.Rmd
@@ -23,8 +23,8 @@ cover-image: img/chapter_overview.jpg
 ---
 
 ```{r setup-pdf, include=FALSE}
-knitr::opts_chunk$set(fig.pos = "H",
-                      out.extra = "")
+#knitr::opts_chunk$set(fig.pos = "H",
+#                      out.extra = "")
 
 ```
 
