fixed incorrect link in Additional resources section

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -1271,7 +1271,7 @@ found in Chapter \@ref(move-to-your-own-machine).
 - If you read the subsection on obtaining data from the web via scraping and
   APIs, we provide two companion tutorial video links for how to use the
   SelectorGadget tool to obtain desired CSS selectors for:
-    - [extracting the data for apartment listings on Craigslist](https://dmi3kno.github.io/polite/), and
+    - [extracting the data for apartment listings on Craigslist](https://www.youtube.com/embed/YdIWI6K64zo), and
     - [extracting Canadian city names and 2016 populations from Wikipedia](https://www.youtube.com/embed/O9HKbdhqYzk).
 - The [`polite` R package](https://dmi3kno.github.io/polite/) [@polite] provides
   a set of tools for responsibly scraping data from websites. 
