fixed whitespace best I could for wrangling

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -260,7 +260,7 @@ to read data into R.
 
 (ref:img-read-csv) Syntax for the `read_csv` function.
 
-``` {r img-read-csv, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-read-csv)", fig.retina = 2, out.width="100%", fig.pos = "H"}
+``` {r img-read-csv, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-read-csv)", fig.retina = 2, out.width="100%", fig.pos = "H", out.extra=""}
 image_read("img/read_csv_function.jpeg") |>
   image_crop("1625x1900")
 ```
@@ -583,7 +583,7 @@ currently making it difficult to read the different language names.
 One solution is to rotate the plot such that the bars are horizontal rather than vertical.
 To accomplish this, we will swap the x and y coordinate axes:
 
-```{r barplot-mother-tongue-flipped, fig.width=5, fig.height=3, fig.pos = "H", warning=FALSE, fig.cap = "Horizontal bar plot of the ten Aboriginal languages most often reported by Canadian residents as their mother tongue."}
+```{r barplot-mother-tongue-flipped, fig.width=5, fig.height=3, fig.pos = "H", out.extra="", warning=FALSE, fig.cap = "Horizontal bar plot of the ten Aboriginal languages most often reported by Canadian residents as their mother tongue."}
 ggplot(ten_lang, aes(x = mother_tongue, y = language)) +
   geom_bar(stat = "identity") +
   xlab("Mother Tongue (Number of Canadian Residents)") +
