--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -81,16 +81,15 @@ these are the values that the three variables take for the first entity in the
 data set. There are 13 entities in the data set in total, corresponding to the
 13 rows in Figure \@ref(fig:02-obs).
 
-``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "A data frame storing data regarding the population of various regions in Canada. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "100%"}
+``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "A data frame storing data regarding the population of various regions in Canada. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "100%"}
 image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.004.jpeg") %>%
   image_crop("3632x700")
 ```
 
-Internally, R stores the columns of a data frame as either
+R stores the columns of a data frame as either
 *lists* or *vectors*.  For example, the data frame in Figure
 \@ref(fig:02-vectors) has three vectors whose names are `region`, `year` and
-`population`.  We will explain what lists and vectors are in the next two
-sections.
+`population`. The next two sections will explain what lists and vectors are.
 
 ``` {r 02-vectors, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Data frame with three vectors.", fig.retina = 2, out.width = "100%"}
 image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.005.jpeg") %>%
@@ -128,6 +127,8 @@ year
 image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.007.jpeg") %>%
   image_crop("3632x590")
 ```
+
+\newpage
 
 Table: (#tab:datatype-table) Basic data types in R
 
@@ -467,7 +468,7 @@ in the `pivot_wider` function.
 
 (ref:img-pivot-wider) Syntax for the `pivot_wider` function.
 
-``` {r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-pivot-wider)", fig.retina = 2, out.width="100%"}
+``` {r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "(ref:img-pivot-wider)", fig.retina = 2, out.width="100%"}
 image_read("img/pivot_wider.jpeg") |>
   image_crop("1625x850")
 ```
@@ -541,7 +542,7 @@ outlines what we need to specify to use `separate`.
 
 (ref:img-separate) Syntax for the `separate` function.
 
-``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-separate)", fig.retina = 2, out.width = "100%"}
+``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "(ref:img-separate)", fig.retina = 2, out.width = "100%"}
 image_read("img/separate_function.jpeg") |>
   image_crop("1625x1900")
 ```
@@ -774,8 +775,6 @@ five_cities <- filter(region_data,
 five_cities
 ```
 
-\newpage
-
 > **Note:** What's the difference between `==` and `%in%`? Suppose we have two
 > vectors, `vectorA` and `vectorB`. If you type `vectorA == vectorB` into R it
 > will compare the vectors element by element. R checks if the first element of
@@ -867,7 +866,7 @@ then `mutate` would create new columns with the names we specified.
 
 (ref:img-mutate) Syntax for the `mutate` function.
 
-``` {r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-mutate)",  fig.retina = 2, out.width = "100%"}
+``` {r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "(ref:img-mutate)",  fig.retina = 2, out.width = "100%"}
 image_read("img/mutate_function.jpeg") |>
   image_crop("1625x1900")
 ```
@@ -1205,7 +1204,7 @@ or columns, as shown in Figure \@ref(fig:summarize).
 
 (ref:summarize) `summarize` is useful for calculating summary statistics on one or more column(s). In its simplest use case, it creates a new data frame with a single row containing the summary statistic(s) for each column being summarized. The darker, top row of each table represents the column headers.
 
-```{r summarize, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:summarize)", fig.retina = 2, out.width = "100%"}
+```{r summarize, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:summarize)", fig.retina = 2, out.width = "85%"}
 image_read("img/summarize/summarize.001.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
@@ -1303,7 +1302,7 @@ for each of the regions in the data set.
 
 (ref:summarize-groupby) `summarize` and `group_by` is useful for calculating summary statistics on one or more column(s) for each group. It creates a new data frame&mdash;with one row for each group&mdash;containing the summary statistic(s) for each column being summarized. It also creates a column listing the value of the grouping variable. The darker, top row of each table represents the column headers. The gray, blue, and green colored rows correspond to the rows that belong to each of the three groups being represented in this cartoon example.
 
-```{r summarize-groupby, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:summarize-groupby)", fig.retina = 2, out.width = "100%"}
+```{r summarize-groupby, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:summarize-groupby)", fig.retina = 2, out.width = "85%"}
 image_read("img/summarize/summarize.002.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
@@ -1345,7 +1344,7 @@ Then we will also explore how we can use a more general iteration function,
 
 (ref:summarize-across) `summarize` + `across` or `map` is useful for efficiently calculating summary statistics on many columns at once. The darker, top row of each table represents the column headers.
 
-```{r summarize-across, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:summarize-across)", fig.retina = 2, out.width = "100%"}
+```{r summarize-across, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = "(ref:summarize-across)", fig.retina = 2, out.width = "85%"}
 image_read("img/summarize/summarize.003.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
@@ -1449,8 +1448,6 @@ region_lang |>
   map_dfr(max)
 ```
 
-\newpage 
-
 > **Note:** Similar to when we use base R statistical summary functions 
 > (e.g., `max`, `min`, `mean`, `sum`, etc.) with `summarize`, 
 > `map` functions paired with base R statistical summary functions
@@ -1483,7 +1480,7 @@ We illustrate such a data transformation in Figure \@ref(fig:mutate-across).
 
 (ref:mutate-across) `mutate` and `across` is useful for applying functions across many columns. The darker, top row of each table represents the column headers.
 
-```{r mutate-across, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:mutate-across)",  fig.retina = 2, out.width = "100%"}
+```{r mutate-across, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:mutate-across)",  fig.retina = 2, out.width = "85%"}
 image_read("img/summarize/summarize.005.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
@@ -1525,7 +1522,7 @@ We illustrate such a data transformation in Figure \@ref(fig:rowwise).
 
 (ref:rowwise) `rowwise` and `mutate` is useful for applying functions across columns within one row. The darker, top row of each table represents the column headers.
 
-```{r rowwise, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:rowwise)",  fig.retina = 2, out.width = "100%"}
+```{r rowwise, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:rowwise)",  fig.retina = 2, out.width = "85%"}
 image_read("img/summarize/summarize.004.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
@@ -1596,6 +1593,8 @@ Table \@ref(tab:summary-functions-table) summarizes some of the key wrangling
 functions we learned in this chapter. In the following chapters, you will 
 learn how you can take this tidy data and do so much more with it to answer your 
 burning data science questions!
+
+\newpage
 
 Table: (#tab:summary-functions-table) Summary of wrangling functions 
 
