fixed up to fig 2.7 of clustering.

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -168,7 +168,7 @@ penguin_data
 Next, we can create a scatter plot using this data set 
 to see if we can detect subtypes or groups in our data set.
 
-```{r 10-toy-example-plot, warning = FALSE, fig.height = 3.5, fig.width = 3.75, fig.align = "center", fig.cap = "Scatter plot of standardized bill length versus standardized flipper length."}
+```{r 10-toy-example-plot, warning = FALSE, fig.height = 3.5, fig.width = 3.75, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "Scatter plot of standardized bill length versus standardized flipper length."}
 ggplot(data, aes(x = flipper_length_standardized, 
                  y = bill_length_standardized)) +
   geom_point() +
@@ -405,6 +405,8 @@ all_clusters_base <- all_clusters_base +
 
 all_clusters_base
 ```
+
+\newpage
 
 ### The clustering algorithm
 
