null download and edit in index Rmd

--- a/index.Rmd
+++ b/index.Rmd
@@ -21,8 +21,8 @@ output:
           <li><a href="./">Data Science: A First Introduction</a></li>
         after: |
           <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
-      edit: https://github.com/rstudio/bookdown-demo/edit/master/%s
-      download: ["pdf", "epub"]
+      edit: null
+      download: null
   bookdown::pdf_book:
     includes:
       in_header: preamble.tex
