fixed escaped character business

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -343,9 +343,10 @@ specify that there are no column names to assign, and give it the value of
 `FALSE`). `read_csv`, `read_tsv` and `read_delim` have a `col_names` argument
 \index{read function!col\_names argument} and the default is `TRUE`. 
 
-> **Note:** `\t` is an example of an *escape character*, \index{escape character}
-> typically used to represent non-printing characters (like the tab) or
-> characters with special meanings (such as quotation marks). 
+> **Note:** `\t` is an example of an *escaped character*, 
+> which always starts with a backslash (`\`). \index{escape character}
+> Escaped characters are used to represent non-printing characters 
+> (like the tab) or characters with special meanings (such as quotation marks). 
 
 ```{r}
 canlang_data <- read_delim("data/can_lang.tsv", 
