--- a/reading.Rmd
+++ b/reading.Rmd
@@ -200,6 +200,8 @@ relative path to the file.
 canlang_data <- read_csv("data/can_lang.csv")
 ```
 
+\newpage
+
 > **Note:** It is also normal and expected that \index{warning} a message is
 > printed out after using
 > the `read_csv` and related functions. This message lets you know the data types
@@ -623,6 +625,8 @@ tail(aboriginal_lang_db)
 ```
 ## Error: tail() is not supported by sql sources
 ```
+\newpage
+
 Additionally, some operations will not work to extract columns or single values
 from the reference given by the `tbl` function. Thus, once you have finished
 your data wrangling of the `tbl` database reference object, it is advisable to
