--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -91,6 +91,8 @@ of our method on observations not seen during training. And finally, we can use 
 choices of model parameters (e.g., K in a K-nearest neighbors model). The major difference
 is that we are now predicting numerical variables instead of categorical variables.
 
+\newpage
+
 > **Note:** You can usually tell whether a \index{categorical variable}\index{numerical variable}
 > variable is numerical or categorical&mdash;and therefore whether you
 > need to perform regression or classification&mdash;by taking two response variables X and Y from your
