--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -291,7 +291,7 @@ linear regression predicted line of best fit. By default `geom_smooth` adds some
 to the plot that we are not interested in at this point; we provide the argument `se = FALSE` to
 tell `geom_smooth` not to show that information. Figure \@ref(fig:08-lm-predict-all) displays the result.
 
-```{r 08-lm-predict-all, fig.height = 3.5, fig.width = 4.5, warning = FALSE, message = FALSE, fig.cap = "Scatter plot of sale price versus size with line of best fit for the full Sacramento housing data."}
+```{r 08-lm-predict-all, fig.height = 3.5, fig.width = 4.5, warning = FALSE, fig.pos = "H", out.extra="", message = FALSE, fig.cap = "Scatter plot of sale price versus size with line of best fit for the full Sacramento housing data."}
 lm_plot_final <- ggplot(sacramento_train, aes(x = sqft, y = price)) +
   geom_point(alpha = 0.4) +
   xlab("House size (square feet)") +
@@ -825,7 +825,7 @@ df <- df |>
 df
 ```
 
-```{r 08-predictor-design, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.pos = "H", out.extra="", fig.cap = "Example of a data set with a nonlinear relationship between the predictor and the response."}
+```{r 08-predictor-design, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.cap = "Example of a data set with a nonlinear relationship between the predictor and the response."}
 curve_plt <- ggplot(df, aes(x = x, y = y)) +
   geom_point() +
   xlab("x") +
@@ -870,12 +870,12 @@ a deep understanding of the problem&mdash;as well as the wrangling tools
 from previous chapters&mdash;to engineer useful new features that improve
 predictive performance.
 
-\newpage
-
 > **Note:** Feature engineering
 > is *part of tuning your model*, and as such you must not use your test data
 > to evaluate the quality of the features you produce. You are free to use
 > cross-validation, though!
+
+\newpage
 
 ## The other sides of regression
 
