added cleardoublepage before TOC

--- a/pdf/latex/before_body.tex
+++ b/pdf/latex/before_body.tex
@@ -18,5 +18,7 @@ To mom and dad, thank you for all your love and support.
 %\includegraphics{images/dedication.pdf}
 \end{center}
 
+\cleardoublepage\newpage\thispagestyle{empty}\null
+
 \setlength{\abovedisplayskip}{-5pt}
 \setlength{\abovedisplayshortskip}{-5pt}
