cap foreword in acks; intro fig captions improved; index entry formatting fixed; minor typesetting

--- a/acknowledgements.Rmd
+++ b/acknowledgements.Rmd
@@ -19,7 +19,7 @@ Rohan Alexander, Isabella Ghement, Virgilio Gómez Rubio, Albert Kim, Adam Loy, 
 The book was improved substantially by their insights.
 We would like to give special thanks to Jim Zidek
 for his support and encouragement throughout the process, and to
-Roger Peng for graciously offering to write the foreword.
+Roger Peng for graciously offering to write the Foreword.
 
 Finally, we owe a debt of gratitude to all of the students of DSCI 100 over the past
 few years. They provided invaluable feedback on the book and worksheets; 
