--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -93,16 +93,18 @@ is that we are now predicting numerical variables instead of categorical variabl
 
 \newpage
 
-> **Note:** You can usually tell whether a \index{categorical variable}\index{numerical variable}
-> variable is numerical or categorical&mdash;and therefore whether you
-> need to perform regression or classification&mdash;by taking two response variables X and Y from your
-> data, and asking the question, "is response variable X *more* than response variable Y?"
-> If the variable is categorical, the question will make no sense (Is blue more than red?
-> Is benign more than malignant?). If the variable is numerical, it will make sense
-> (Is 1.5 hours more than 2.25 hours? Is \$500,000 more than \$400,000?).
-> Be careful when applying this heuristic, though: sometimes categorical variables will be encoded as
-> numbers in your data (e.g., "1" represents "benign", and "0" represents "malignant"). In these cases
-> you have to ask the question about the *meaning* of the labels ("benign" and "malignant"), not their values ("1" and "0"). 
+> **Note:** You can usually tell whether a \index{categorical variable}\index{numerical variable} variable is numerical or
+> categorical&mdash;and therefore whether you need to perform regression or
+> classification&mdash;by taking two response variables X and Y from your data,
+> and asking the question, "is response variable X *more* than response
+> variable Y?" If the variable is categorical, the question will make no sense.
+> (Is blue more than red?  Is benign more than malignant?) If the variable is
+> numerical, it will make sense. (Is 1.5 hours more than 2.25 hours? Is
+> \$500,000 more than \$400,000?) Be careful when applying this heuristic,
+> though: sometimes categorical variables will be encoded as numbers in your
+> data (e.g., "1" represents "benign", and "0" represents "malignant"). In
+> these cases you have to ask the question about the *meaning* of the labels
+> ("benign" and "malignant"), not their values ("1" and "0"). 
 
 ## Exploring a data set
 
