--- a/setup.Rmd
+++ b/setup.Rmd
@@ -128,7 +128,7 @@ and to running `conda init`, which makes `conda` available from the terminal.
 
 ### JupyterLab
 
-With miniconda set up, we can now install JupyterLab \index{JupyterLab!installation} and the Jupyter Git \index{git!Jupyter extension} extension. 
+With miniconda set up, we can now install JupyterLab \index{JupyterLab installation} and the Jupyter Git \index{git!Jupyter extension} extension. 
 Type the following into the Anaconda Prompt (Windows) or the terminal (MacOS and Ubuntu) and press enter:
 
 ```
@@ -157,7 +157,7 @@ jupyter labextension install @techrah/text-shortcuts
 
 ### R, R packages, and the IRkernel 
 
-To have the software \index{R!installation} used in this book available to you in JupyterLab, 
+To have the software \index{R installation} used in this book available to you in JupyterLab, 
 you will need to install the R programming language,
 several R packages,
 and the \index{kernel!installation} IRkernel.
