moved caption out of vsn ctl for double quote fix

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -553,7 +553,9 @@ copy that knows where it was obtained from so that it knows where to send/receiv
 new committed edits. In order to do this, first copy the URL from the HTTPS tab 
 of the Code drop-down menu on GitHub (Figure \@ref(fig:clone-02)).
 
-```{r clone-02, fig.pos = "H", out.extra="", fig.cap = 'The green ``Code'' drop-down menu contains the remote address (URL) corresponding to the location of the remote GitHub repository.', fig.retina = 2, out.width="100%"}
+(ref:clone-02) The green "Code" drop-down menu contains the remote address (URL) corresponding to the location of the remote GitHub repository.
+
+```{r clone-02, fig.pos = "H", out.extra="", fig.cap = '(ref:clone-02)', fig.retina = 2, out.width="100%"}
 image_read("img/version_control/clone_02.png") |>
   image_crop("3584x1050")
 ```
