--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1515,12 +1515,15 @@ knitr::include_graphics("img/png-vs-svg.png")
 ## Exercises
 
 Practice exercises for the material covered in this chapter 
-can be found in the accompanying [worksheet](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets/blob/main/worksheet_viz/worksheet_viz.ipynb).
-The worksheet tries to provide automated feedback 
-and help guide you through the problems. 
-To make sure this functionality works as intended, 
-please follow the instructions for computer setup needed to run the worksheets 
-found in Chapter \@ref(move-to-your-own-machine).
+can be found in the accompanying 
+[worksheets repository](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets#readme)
+in the ``Effective data visualization'' row.
+You can launch an interactive version of the worksheet in your browser by clicking the ``launch binder'' button.
+You can also preview a non-interactive version of the worksheet by clicking ``view worksheet''.
+If you instead decide to download the worksheet and run it on your own machine,
+make sure to follow the instructions for computer setup  
+found in Chapter \@ref(move-to-your-own-machine). This will ensure that the automated feedback
+and guidance that the worksheets provide will function as intended.
 
 ## Additional resources
 - The [`ggplot2` R package page](https://ggplot2.tidyverse.org) [@ggplot] is
