--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -1388,9 +1388,9 @@ fwd_sel_accuracies_plot
 Practice exercises for the material covered in this chapter 
 can be found in the accompanying 
 [worksheets repository](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets#readme)
-in the ``Classification II: evaluation and tuning'' row.
-You can launch an interactive version of the worksheet in your browser by clicking the ``launch binder'' button.
-You can also preview a non-interactive version of the worksheet by clicking ``view worksheet''.
+in the "Classification II: evaluation and tuning" row.
+You can launch an interactive version of the worksheet in your browser by clicking the "launch binder" button.
+You can also preview a non-interactive version of the worksheet by clicking "view worksheet."
 If you instead decide to download the worksheet and run it on your own machine,
 make sure to follow the instructions for computer setup  
 found in Chapter \@ref(move-to-your-own-machine). This will ensure that the automated feedback
