--- a/intro.Rmd
+++ b/intro.Rmd
@@ -706,9 +706,9 @@ knitr::include_graphics("img/help-filter.png")
 Practice exercises for the material covered in this chapter 
 can be found in the accompanying 
 [worksheets repository](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets#readme)
-in the ``R and the tidyverse'' row.
-You can launch an interactive version of the worksheet in your browser by clicking the ``launch binder'' button.
-You can also preview a non-interactive version of the worksheet by clicking ``view worksheet''.
+in the "R and the tidyverse" row.
+You can launch an interactive version of the worksheet in your browser by clicking the "launch binder" button.
+You can also preview a non-interactive version of the worksheet by clicking "view worksheet."
 If you instead decide to download the worksheet and run it on your own machine,
 make sure to follow the instructions for computer setup  
 found in Chapter \@ref(move-to-your-own-machine). This will ensure that the automated feedback
