--- a/reading.Rmd
+++ b/reading.Rmd
@@ -971,8 +971,8 @@ knitr::include_graphics("img/sg1.png")
 ```
 
 If we then click the size of an apartment listing, SelectorGadget shows us
-the `span` selector, and highlights much of the page; this indicates that the
-`span` selector is not specific enough to just capture apartment sizes (Figure \@ref(fig:sg3)). 
+the `span` selector, and highlights many of the lines on the page; this indicates that the
+`span` selector is not specific enough to capture only apartment sizes (Figure \@ref(fig:sg3)). 
 
 ```{r sg3, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Using the SelectorGadget on a Craigslist webpage to obtain a CCS selector useful for obtaining apartment sizes.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/sg3.png")
@@ -1247,7 +1247,7 @@ in the "Reading in data locally and from the web" row.
 You can launch an interactive version of the worksheet in your browser by clicking the "launch binder" button.
 You can also preview a non-interactive version of the worksheet by clicking "view worksheet."
 If you instead decide to download the worksheet and run it on your own machine,
-make sure to follow the instructions for computer setup  
+make sure to follow the instructions for computer setup
 found in Chapter \@ref(move-to-your-own-machine). This will ensure that the automated feedback
 and guidance that the worksheets provide will function as intended.
 
