--- a/preface-text.Rmd
+++ b/preface-text.Rmd
@@ -53,11 +53,11 @@ to help you practice the concepts you will learn. We strongly recommend that you
 work through the worksheet when you finish reading each chapter 
 before moving on to the next chapter. All of the worksheets
 are available at 
-[https://ubc-dsci.github.io/data-science-a-first-intro-worksheets](https://ubc-dsci.github.io/data-science-a-first-intro-worksheets);
+[https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets#readme](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets#readme);
 the "Exercises" section at the end of each chapter points you to the right worksheet for that chapter.
-The worksheets are designed to provide automated feedback and help guide you through the problems.
-To make sure that functionality works as intended, make sure to follow the setup directions 
-in Chapter \@ref(move-to-your-own-machine) regarding downloading the worksheets.
-
-
-
+For each worksheet, you can either launch an interactive version of the worksheet in your browser by clicking the "launch binder" button,
+or preview a non-interactive version of the worksheet by clicking "view worksheet."
+If you instead decide to download the worksheet and run it on your own machine,
+make sure to follow the instructions for computer setup
+found in Chapter \@ref(move-to-your-own-machine). This will ensure that the automated feedback
+and guidance that the worksheets provide will function as intended.
