--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,7 @@
 --- 
-title: "Data Science: A First Introduction"
-author: 
-- Tiffany-Anne Timbers
-- Trevor Campbell
-- Melissa Lee
+title: "Data Science"
+subtitle: "A First Introduction"
+author: "Tiffany Timbers, Trevor Campbell and Melissa Lee <br> Foreword by Roger Peng"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
@@ -12,6 +10,8 @@ biblio-style: apalike
 link-citations: yes
 description: "This is a textbook for teaching a first introduction to data science."
 always_allow_html: true
+cover-image: "img/ds-a-first-intro-graphic.png"
+graphics: yes
 output:
   bookdown::gitbook:
     css: style.css
@@ -34,11 +34,14 @@ output:
 
 ---
 
-```{r preface, child="foreword-text.Rmd"}
+```{r test, child="test-text.Rmd"}
+```
+
+```{r foreward, child="foreword-text.Rmd"}
 ```
 
 ```{r preface, child="preface-text.Rmd"}
 ```
 
-```{r preface, child="acknowledgements.Rmd"}
+```{r acknowledgements, child="acknowledgements.Rmd"}
 ```
