reworked html landing page

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,7 @@
 --- 
-title: "Data Science"
+title: |
+  ![](img/ds-a-first-intro-graphic.png)  
+  Data Science
 subtitle: "A First Introduction"
 author: "Tiffany Timbers, Trevor Campbell and Melissa Lee <br> Foreword by Roger Peng"
 date: "`r Sys.Date()`"
@@ -12,30 +14,19 @@ description: "This is a textbook for teaching a first introduction to data scien
 always_allow_html: true
 cover-image: "img/ds-a-first-intro-graphic.png"
 graphics: yes
-output:
-  bookdown::gitbook:
-    css: style.css
-    config:
-      toc:
-        before: |
-          <li><a href="./">Data Science: A First Introduction</a></li>
-        after: |
-          <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
-      edit: https://github.com/rstudio/bookdown-demo/edit/master/%s
-      download: ["pdf", "epub"]
-  bookdown::pdf_book:
-    includes:
-      in_header: preamble.tex
-      after_body: printindex.tex
-    latex_engine: xelatex
-    citation_package: natbib
-    keep_tex: yes
-  bookdown::epub_book: default
-
 ---
 
-```{r test, child="test-text.Rmd"}
+# Welcome! {-}
+
+This is the [website](https://datasciencebook.ca/) for *Data Science: A First Introduction*! You can also purchase a PDF or print copy of the book at [CRC Press](https://www.routledge.com/Data-Science-A-First-Introduction/Timbers-Campbell-Lee/p/book/9780367524685).
+
+```{r bookcover, echo = FALSE, fig.retina = 2, out.width = "45%"}
+knitr::include_graphics("img/ds-first-intro-cover.png")
 ```
+
+<img src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png">
+
+This work by [Tiffany Timbers](https://www.tiffanytimbers.com/), [Trevor Campbell](https://trevorcampbell.me/) and [Melissa Lee](https://www.stat.ubc.ca/users/melissa-lee) is licensed under a [Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License](http://creativecommons.org/licenses/by-nc-sa/4.0/).
 
 ```{r foreward, child="foreword-text.Rmd"}
 ```
