minor adjustments to landing page

--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: |
   ![](img/ds-a-first-intro-graphic.png)  
   Data Science
 subtitle: "A First Introduction"
-author: "Tiffany Timbers, Trevor Campbell and Melissa Lee <br> Foreword by Roger Peng"
+author: "Tiffany Timbers, Trevor Campbell, and Melissa Lee <br> Foreword by Roger Peng"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
@@ -37,7 +37,9 @@ output:
 
 # Welcome! {-}
 
-This is the [website](https://datasciencebook.ca/) for *Data Science: A First Introduction*! You can also purchase a PDF or print copy of the book at [CRC Press](https://www.routledge.com/Data-Science-A-First-Introduction/Timbers-Campbell-Lee/p/book/9780367524685).
+This is the [website](https://datasciencebook.ca/) for *Data Science: A First Introduction*. 
+You can purchase a PDF or print copy of the book 
+on the [CRC Press website](https://www.routledge.com/Data-Science-A-First-Introduction/Timbers-Campbell-Lee/p/book/9780367524685).
 
 ```{r bookcover, echo = FALSE, fig.retina = 2, out.width = "45%"}
 knitr::include_graphics("img/ds-first-intro-cover.png")
@@ -45,7 +47,9 @@ knitr::include_graphics("img/ds-first-intro-cover.png")
 
 <img src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png">
 
-This work by [Tiffany Timbers](https://www.tiffanytimbers.com/), [Trevor Campbell](https://trevorcampbell.me/) and [Melissa Lee](https://www.stat.ubc.ca/users/melissa-lee) is licensed under a [Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License](http://creativecommons.org/licenses/by-nc-sa/4.0/).
+This work by [Tiffany Timbers](https://www.tiffanytimbers.com/), [Trevor Campbell](https://trevorcampbell.me/), 
+and [Melissa Lee](https://www.stat.ubc.ca/users/melissa-lee) is licensed under 
+a [Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License](http://creativecommons.org/licenses/by-nc-sa/4.0/).
 
 ```{r foreward, child="foreword-text.Rmd"}
 ```
