--- a/index.Rmd
+++ b/index.Rmd
@@ -14,15 +14,14 @@ description: "This is a textbook for teaching a first introduction to data scien
 always_allow_html: true
 cover-image: "img/ds-a-first-intro-graphic.png"
 graphics: yes
+url: https://datasciencebook.ca
 output:
   bookdown::gitbook:
     css: style.css
     config:
       toc:
         before: |
-          <li><a href="./">Data Science: A First Introduction</a></li>
-        after: |
-          <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
+          <li><a href="https://datasciencebook.ca">Data Science: A First Introduction</a></li>
       edit: null
       download: null
   bookdown::pdf_book:
