--- a/pdf/index.Rmd
+++ b/pdf/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "Data Science: A First Introduction"
-author: "Tiffany-Anne Timbers, Trevor Campbell & Melissa Lee"
+author: "Tiffany Timbers, Trevor Campbell, and Melissa Lee"
 date: "`r Sys.Date()`"
 knit: "bookdown::render_book"
 documentclass: krantz
@@ -16,10 +16,10 @@ lot: yes
 lof: yes
 fontsize: 12pt
 graphics: yes
+cover-image: "img/ds-a-first-intro-cover.jpg"
 site: bookdown::bookdown_site
 description: "This is a textbook for teaching a first introduction to data science."
 github-repo: UBC-DSCI/introduction-to-datascience
-cover-image: img/chapter_overview.jpg
 ---
 
 ```{r setup-pdf, include=FALSE}
