--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -715,7 +715,7 @@ it takes to run the analysis. So when you do cross-validation, you need to
 consider the size of the data, and the speed of the algorithm (e.g., $K$-nearest
 neighbor) and the speed of your computer. In practice, this is a 
 trial-and-error process, but typically $C$ is chosen to be either 5 or 10. Here we use 10-fold cross-validation rather
-than 5-fold:
+than 5-fold and we see we get a lower standard error:
 
 ```{r 06-10-fold}
 cancer_vfold <- vfold_cv(cancer_train, v = 10, strata = Class)
@@ -731,7 +731,7 @@ vfold_metrics
 
 Increasing the number of folds will usually result in a lower standard error, though this is 
 not always the case. Due to random noise, sometimes we might get a higher value. In this example, 
-the standard error went down slightly, but not by a lot. 
+the standard error decreased slightly, but not by a lot. 
 
 ```{r 06-50-fold-seed, echo = FALSE, warning = FALSE, message = FALSE}
 # hidden seed
@@ -753,7 +753,7 @@ vfold_metrics_50 <- workflow() |>
 vfold_metrics_50
 ```
 
-In practice, we usually have a lot of data and setting $C$ to such a large number often takes too long to run, so we usually stick to 5 or 10 folds.
+In practice, we usually have a lot of data and setting $C$ to such a large number often takes a long time to run, so we usually stick to 5 or 10 folds.
 
 ### Parameter value selection
 
