--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -170,6 +170,7 @@ total set of variables per image in this data set is:
 11. Symmetry: how similar the nucleus is when mirrored 
 12. Fractal Dimension: a measurement of how "rough" the perimeter is 
 
+\pagebreak
 
 Below we use `glimpse` \index{glimpse} to preview the data frame. This function can 
 make it easier to inspect the data when we have a lot of columns, 
@@ -192,7 +193,7 @@ glimpse(cancer)
 ```
 
 Recall that factors have what are called "levels", which you can think of as categories. We
-can verify the levels of the `Class` column by using the `levels` \index{levels}\index{factor!levels} function.
+can verify the levels of the `Class` column by using the `levels`\index{levels}\index{factor!levels} function.
 This function should return the name of each category in that column. Given
 that we only have two different values in our `Class` column (B for benign and M 
 for malignant), we only expect to get two names back.  Note that the `levels` function requires a *vector* argument; 
@@ -534,7 +535,7 @@ kable(math_table, booktabs = TRUE,
 ```
 
 The result of this computation shows that 3 of the 5 nearest neighbors to our new observation are
-malignant (`M`); since this is the majority, we classify our new observation as malignant. 
+malignant ("M"); since this is the majority, we classify our new observation as malignant. 
 These 5 neighbors are circled in Figure \@ref(fig:05-multiknn-3).
 
 ```{r 05-multiknn-3, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.cap="Scatter plot of concavity versus perimeter with 5 nearest neighbors circled."}
@@ -582,7 +583,6 @@ three predictors.
 new_obs_Perimeter <- 0
 new_obs_Concavity <- 3.5
 new_obs_Symmetry <- 1
-
 cancer |>
   select(ID, Perimeter, Concavity, Symmetry, Class) |>
   mutate(dist_from_new = sqrt((Perimeter - new_obs_Perimeter)^2 + 
