removing warning message from output, fixing spacing

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -846,8 +846,8 @@ loaded, and the standardized version of that same data. But first, we need to
 standardize the `unscaled_cancer` data set with `tidymodels`.
 
 In the `tidymodels` framework, all data preprocessing happens 
-using a `recipe` from [the `recipes` R package](https://recipes.tidymodels.org/) [@recipes]
-Here we will initialize a recipe \index{recipe} \index{tidymodels!recipe|see{recipe}} for 
+using a `recipe` from [the `recipes` R package](https://recipes.tidymodels.org/) [@recipes].
+Here we will initialize a recipe\index{recipe} \index{tidymodels!recipe|see{recipe}} for 
 the `unscaled_cancer` data above, specifying
 that the `Class` variable is the target, and all other variables are predictors:
 
@@ -1296,7 +1296,7 @@ The `tidymodels` package collection also provides the `workflow`, a way to chain
 To illustrate the whole pipeline, let's start from scratch with the `unscaled_wdbc.csv` data.
 First we will load the data, create a model, and specify a recipe for how the data should be preprocessed:
 
-```{r 05-workflow}
+```{r 05-workflow, message = FALSE, warning = FALSE}
 # load the unscaled cancer data 
 # and make sure the target Class variable is a factor
 unscaled_cancer <- read_csv("data/unscaled_wdbc.csv") |>
