--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -1320,7 +1320,7 @@ formula `Class ~ Area + Smoothness` (instead of `Class ~ .`) in the recipe.
 You will also notice that we did not call `prep()` on the recipe; this is unnecessary when it is
 placed in a workflow.
 
-We will now place these steps in a `workflow` using the `add_recipe` and `add_model` functions, \index{tidymodels!add\_recipe}\index{tidymodels!add\_model}
+We will now place these steps in a `workflow` using the `add_recipe` and `add_model` functions,\index{tidymodels!add\_recipe}\index{tidymodels!add\_model}
 and finally we will use the `fit` function to run the whole workflow on the `unscaled_cancer` data.
 Note another difference from earlier here: we do not include a formula in the `fit` function. This \index{tidymodels!fit}
 is again because we included the formula in the recipe, so there is no need to respecify it:
@@ -1363,6 +1363,8 @@ For the interested reader who wants a learning challenge, we now include it belo
 The basic idea is to create a grid of synthetic new observations using the `expand.grid` function, 
 predict the label of each, and visualize the predictions with a colored scatter having a very high transparency 
 (low `alpha` value) and large point radius. See if you can figure out what each line is doing!
+
+\pagebreak 
 
 > **Note:** Understanding this code is not required for the remainder of the
 > textbook. It is included for those readers who would like to use similar
