changing interpretations of betas

--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -553,8 +553,8 @@ $$\text{house sale price} = \beta_0 + \beta_1\cdot(\text{house size}) + \beta_2\
 where:
 
 - $\beta_0$ is the *vertical intercept* of the hyperplane (the price when both house size and number of bedrooms are 0)
-- $\beta_1$ is the *slope* for the first predictor (how quickly the price increases as you increase house size)
-- $\beta_2$ is the *slope* for the second predictor (how quickly the price increases as you increase the number of bedrooms)
+- $\beta_1$ is the *slope* for the first predictor (how quickly the price changes as you increase house size holding number of bedrooms constant)
+- $\beta_2$ is the *slope* for the second predictor (how quickly the price changes as you increase the number of bedrooms holding house size constant)
 
 Finally, we can fill in the values for $\beta_0$, $\beta_1$ and $\beta_2$ from the model output above
 to create the equation of the plane of best fit to the data: 
