changing M to code M

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -535,7 +535,7 @@ kable(math_table, booktabs = TRUE,
 ```
 
 The result of this computation shows that 3 of the 5 nearest neighbors to our new observation are
-malignant ("M"); since this is the majority, we classify our new observation as malignant. 
+malignant (`M`); since this is the majority, we classify our new observation as malignant. 
 These 5 neighbors are circled in Figure \@ref(fig:05-multiknn-3).
 
 ```{r 05-multiknn-3, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.cap="Scatter plot of concavity versus perimeter with 5 nearest neighbors circled."}
