changing different to nonsensical, adding comma

--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -129,7 +129,7 @@ $\beta_1$ as the increase in price for each square foot of space.
 Let's push this thought even further: what would happen in the equation for the line if you 
 tried to evaluate the price of a house with size 6 *million* square feet?
 Or what about *negative* 2,000 square feet? As it turns out, nothing in the formula breaks; linear
-regression will happily make predictions for different predictor values if you ask it to. But even though
+regression will happily make predictions for nonsensical predictor values if you ask it to. But even though
 you *can* make these wild predictions, you shouldn't. You should only make predictions roughly within
 the range of your original data, and perhaps a bit beyond it only if it makes sense. For example,
 the data in Figure \@ref(fig:08-lin-reg1) only reaches around 800 square feet on the low end, but 
@@ -553,8 +553,8 @@ $$\text{house sale price} = \beta_0 + \beta_1\cdot(\text{house size}) + \beta_2\
 where:
 
 - $\beta_0$ is the *vertical intercept* of the hyperplane (the price when both house size and number of bedrooms are 0)
-- $\beta_1$ is the *slope* for the first predictor (how quickly the price changes as you increase house size holding number of bedrooms constant)
-- $\beta_2$ is the *slope* for the second predictor (how quickly the price changes as you increase the number of bedrooms holding house size constant)
+- $\beta_1$ is the *slope* for the first predictor (how quickly the price changes as you increase house size, holding number of bedrooms constant)
+- $\beta_2$ is the *slope* for the second predictor (how quickly the price changes as you increase the number of bedrooms, holding house size constant)
 
 Finally, we can fill in the values for $\beta_0$, $\beta_1$ and $\beta_2$ from the model output above
 to create the equation of the plane of best fit to the data: 
