making changes to set.seed example writing

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -134,35 +134,34 @@ Here, we pass in the number `1`.
 
 ```{r}
 set.seed(1)
-random_numbers <- sample(0:9, 10, replace=TRUE)
-random_numbers
+random_numbers1 <- sample(0:9, 10, replace=TRUE)
+random_numbers1
 ```
 
-You can see that `random_numbers` is a list of 10 numbers
+You can see that `random_numbers1` is a list of 10 numbers
 from 0 to 9 that, from all appearances, looks random. If 
 we run the `sample` function again, we will 
 get a fresh batch of 10 numbers that also look random.
 
 ```{r}
-random_numbers <- sample(0:9, 10, replace=TRUE)
-random_numbers
+random_numbers2 <- sample(0:9, 10, replace=TRUE)
+random_numbers2
 ```
 
 If we want to force R to produce the same sequences of random numbers,
 we can simply call the `set.seed` function again with the same argument
-value.
+value. 
 
 ```{r}
 set.seed(1)
-random_numbers <- sample(0:9, 10, replace=TRUE)
-random_numbers
+random_numbers1_again <- sample(0:9, 10, replace=TRUE)
+random_numbers1_again
 
-set.seed(1)
-random_numbers <- sample(0:9, 10, replace=TRUE)
-random_numbers
+random_numbers2_again <- sample(0:9, 10, replace=TRUE)
+random_numbers2_again
 ```
 
-And if we choose 
+Notice that after setting the seed, we get the same two sequences of numbers in the same order. `random_numbers1` and `random_numbers1_again` produce the same sequence of numbers, and the same can be said about `random_numbers2` and `random_numbers2_again`. And if we choose 
 a different value for the seed&mdash;say, 4235&mdash;we
 obtain a different sequence of random numbers.
 
@@ -171,7 +170,6 @@ set.seed(4235)
 random_numbers <- sample(0:9, 10, replace=TRUE)
 random_numbers
 
-set.seed(4235)
 random_numbers <- sample(0:9, 10, replace=TRUE)
 random_numbers
 ```
