--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -225,7 +225,7 @@ made. In Figure \@ref(fig:vc-ba3-commit), the message is `Message about changes.
 your work you should make sure to replace this with an
 informative message about what changed. It is also important to note here that
 these changes are only being committed to the local repository's history.  The
-remote repository on GitHub has not changed, and collaborators would not yet be
+remote repository on GitHub has not changed, and collaborators are not yet 
 able to see your new changes.
 
 ```{r vc-ba3-commit, fig.cap = "Committing the modified files in the staging area to the local repository history, with an informative message about what changed.", fig.retina = 2, out.width="100%"}
@@ -903,7 +903,7 @@ image_read("img/version_control/issue_01.png") |>
 
 Next click the "New issue" button (Figure \@ref(fig:issue-02)).
 
-(ref:issue-02) The "New issues" button on the GitHub web interface.
+(ref:issue-02) The "New issue" button on the GitHub web interface.
 
 ```{r issue-02, fig.pos = "H", out.extra="", fig.cap = '(ref:issue-02)', fig.retina = 2, out.width="100%"}
 image_read("img/version_control/issue_02.png") |>
